--- a/Rapport/1Chapters/1Preanalysis/Amplifier.tex
+++ b/Rapport/1Chapters/1Preanalysis/Amplifier.tex
@@ -1,9 +1,7 @@
 \section{Amplifier}
-This section will briefly describe the amplifier in a active loudspeaker and analyse how distortion is created in the amplifier.
-
 The amplifier is the module which amplifies the input signal. There are several different classes of amplifiers for example class A, AB and D, these classes have different characteristics which gives them different advantages and disadvantages. Two main parameters for the performance of an amplifier are distortion and efficiency. There are several sources for the distortion in a amplifier, such as non-linearity in the active components, crossover distortion and audio clipping. Since no active components are ideal, all active components will create some distortion whenever a signal is passed through the components. An option for better performance is to increase the open-loop amplification of the amplifier as this will give more signal to feedback over thus decreasing the distortion from the components. Since the extend of this project will not deal with circuit design of an amplifier, crossover and non-linearity in component will not be further investigated.
 
-Audio clipping is a wave distortion that occurs when the output signal has a greater signal level than the device is capable of producing. If the signal level is beyond the limitation of the device, the device will cut the signal to its maximum level. This type of clipping is called hard clipping and is often undesirable. In \autoref{fig:audioclipping} an example of how hard clipping affects a 1 kHz sinusoid with a peak amplitude of 1.5. The maximum output level of the device is simulated to be 1.
+Audio clipping is a wave distortion that occurs when the output signal has a greater signal level than the device is capable of producing. If the signal level is beyond the limitation of the device, the device will cut the signal to its maximum level. This type of clipping is called hard clipping and is often undesirable. In \autoref{fig:audioclipping} an example of how hard clipping affects a 1 kHz sinusoid with a peak amplitude of 1.5, a maximum output level of the device of 1 is illustrated.
 
 \begin{figure}[H]
 \centering
@@ -49,7 +47,7 @@ As seen in \autoref{eq:fourier_series_square}, the function of a square-wave sig
 	\caption{FFT of a 1 kHz sinusoid with clipping.}
 	\label{fig:clippingDistFFT}
 \end{subfigure}
-\caption{The Fast Fourier Transformation(FFT) of the 1 kHz sinusoid with a peak amplitude on 1.5. }
+\caption{The Fast Fourier Transformation(FFT) of the 1 kHz sinusoid with a peak amplitude on 1.5 which is clipped to 1. }
 \label{fig:audioclippingFFT}
 \end{figure}
 %The sampling frequency is 48 kHz and a Kaiser-window function with a $\beta$-value of 38 is applied to both signal.
