--- a/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
+++ b/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
@@ -1,4 +1,4 @@
-\subsection{Test of DALI Zensor 5}
+\subsection*{Test of DALI Zensor 5}
 In order to determine whether or not it is possible to use sensory equipment to measure any vibration from the loudspeaker system. It is desireable to check if the output of the sensors can be analyzed and a suitable action can be taken. The loudspeaker which will be the basis for the test is the Zensor 5, shown on \autoref{fig:dali_zensor5}, produced by DALI. A passive loudspeaker has been choosen for the test because the amplifier in DALI's active loudspeakers are designed not to push the loudspeaker to its limits and beyond. %and to be able to test how the vibrations affect distortion, the loudspeaker must be tested to above its limits.
 
 \begin{figure}[H]
@@ -10,12 +10,12 @@ In order to determine whether or not it is possible to use sensory equipment to 
 
 %\todo[inline]{Reference http://www.dali-speakers.com/loudspeakers/zensor/zensor-5/}
 
-For measuring the vibrations inside the enclosure two accelometers have been placed inside the enclosure, one on the back of bottom driver and one on the top back of the enclosure. For measuring sound a microphone has been placed 1 m from the speaker. To limit any reflection from the room, the test is perfomed in the Anechoic room at \gls{AAU} see \ref{fig:test_setup_R}.  
+For measuring the vibrations inside the enclosure two accelometers have been placed inside the enclosure, one on the back of bottom driver and one on the top back of the enclosure. For measuring sound a microphone has been placed 1 m from the speaker. To limit any reflection from the room, the test is perfomed in the Anechoic room at \gls{AAU}, refer to the full journal for detailed descriptions of setup in \autoref{app:journal_speaker_test}.  
 %\todo[inline]{Reference (09.03.2016) http://doc.es.aau.dk/labs/acoustics/facilities/anechoic_room_large/} 
 
 
 
-The loudspeaker is set to play a sinesweep from the crossover frequency of the speaker which is 2400 Hz to 10 Hz. The sine sweep is then repeated from the lowest volume setting of a power amplifier until the loudspeaker breaks. There are in total 20 datasets each containing four measurements, namely the vibrations from the enclosure and driver, the sound pressure from the microphone, and lastly a reference signal to synchronize all data. The amount of data is therefore large and only relevant datasets will be presented. If needed, a more comprehensive approach is taken in \autoref{app:journal_speaker_test} and a full detailed overview of graphs is stored on the enclosed CD.%This resulted in 20 sine sweep measurements from all three sensors  where the results can be deducted from the test journal in \autoref{app:journal_speaker_test} and the outputs from every sensor can be seen on the CD
+The loudspeaker is set to play a sinesweep from the crossover frequency of the speaker which is 2400 Hz to 10 Hz. The sine sweep is then repeated from the lowest volume setting of a power amplifier until the loudspeaker breaks. There are in total 20 datasets each containing four measurements, namely the vibrations from the enclosure, driver, the sound pressure from the microphone, and lastly a reference signal to synchronize all data. The amount of data is therefore large and only relevant datasets will be presented. If needed, a more comprehensive approach is taken in \autoref{app:journal_speaker_test} and a full detailed overview of graphs is stored on the enclosed CD.%This resulted in 20 sine sweep measurements from all three sensors  where the results can be deducted from the test journal in \autoref{app:journal_speaker_test} and the outputs from every sensor can be seen on the CD
 \todo[inline]{reference til cd}
 
 
@@ -30,7 +30,7 @@ There are many different approaches in analysing the measured data, and the appr
 
 %\vspace{3mm}
 
-During the first accelerometer measurements the loudspeaker acts linear with very little fluctuations. The frequency response keeps being steadily the same with an increase in amplitude which was expected. A tendency shows that the 3rd harmonic increases more rapidly than the 2nd harmonic, again as expected for the performance of a loudspeaker. When the speaker was pushed beyond the capabilities told by DALI an anomaly appears in the measurements. This is shown in \autoref{fig:raw_driver19_window_main}, where spikes in amplitude appear when playing very low frequency sound. 
+During the first accelerometer measurements the loudspeaker acts linear with very little fluctuations. The frequency response keeps being steadily the same with an increase in amplitude which was expected. A tendency shows that the 3rd harmonic increases more rapidly than the 2nd harmonic, again as expected for the performance of a loudspeaker. When the speaker was pushed beyond the capabilities specified by DALI an anomaly appears in the measurements. This is shown in \autoref{fig:raw_driver19_window_main}, where spikes in amplitude appear when playing very low frequency sound. 
 
 \begin{figure}[H]
 \centering
@@ -47,11 +47,11 @@ During the first accelerometer measurements the loudspeaker acts linear with ver
 	\caption{The grey area zoomed in.}
 	\label{fig:raw_driver19_window_zoom_main}
 \end{subfigure}
-\caption{Raw data from the driver measured by an accelerometer. The greyed area is analysed to examine if there are any signs of an impulse.}
+\caption{Raw data from the driver measured by an accelerometer placed on the driver. The greyed area is analysed to examine if there are any signs of an impulse.}
 \label{fig:raw_driver19_windows_main}
 \end{figure}
 
-Further investigation of the spikes is shown in figure \ref{fig:raw_driver19_window_zoom_main}. It shows that theses spikes appear where the speaker should naturally attenuate the spikes. The spikes appear with no sudden coherence. Looking further into the specific area, around 70-90 Hz, an FFT analysis shows how the hit on the back plates appears which is shown on \autoref{fig:FFT_hit_Main}.
+Further investigation of the spikes is shown in figure \ref{fig:raw_driver19_window_zoom_main}. It shows that theses spikes appear where the speaker should naturally attenuate the spikes and the spikes appear with no sudden coherence which show signs of the coil hitting the backplate. Looking further into the specific area, around 70-90 Hz, an FFT analysis shows how the hit on the back plates appears which is shown on \autoref{fig:FFT_hit_Main}.
 
 \begin{figure}[H]
 \centering
@@ -61,7 +61,7 @@ Further investigation of the spikes is shown in figure \ref{fig:raw_driver19_win
 \label{fig:FFT_hit_Main}
 \end{figure}
 
-\autoref{fig:FFT_hit_Main} Shows that this area is affected by hits. Conforming \autoref{subsec:impulses} it can be seen that is an increase in energy level across all frequencies. This is particularly seen when comparing measurement 10 through 19. It is possible to see how the fundamental at 80 Hz is not increasing dramatically. This is due to the high needs of wattages at that point. However, the entire signals lies more or less 20 dB higher which corresponds to 100 times the energy. This concludes that hits occur but at a relatively very high volume level. From this the following problem statement, in \autoref{ProblemStatement}, can be derived.
+\autoref{fig:FFT_hit_Main} shows that this area is affected by hits as mentioned before, refering back to \autoref{subsec:impulses} where it can also be seen that an increase in energy level across all frequencies point towards an impulse in the form of a hit. This is particularly seen when comparing measurement 10 through 19. It is possible to see how the fundamental tone at 80 Hz is not increasing dramatically. This is due to the high needs of wattages at that point. However, the entire signals lies more or less 20 dB higher which corresponds to 100 times the energy. This concludes that hits occur but at a very high volume level.
 
 
 
