--- a/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
+++ b/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
@@ -1,11 +1,11 @@
 \section{Feedback versus Feedforward System} \label{sec:feedback}
 
-At this point it is yet to be determined if the system will be based on a feedback or a feedforward system. The choices are to design a feedback system that will decide what to do, based on real-time measurements from a sensor i.e. accelerometer, or a feedforward system that will analyse an input signal and then decide what to do. Since there are no well documented experiments when concerning with sensors in speaker cabinets further experiments are to be deducted. A possible solution for a feedback system is depicted on \autoref{fig:feedbacksystem}. This system depicted will be further investigated to see if plausible.
+At this point it is yet to be determined if the system will be based on a feedback or a feedforward system. The choices are to design a feedback system that will decide what to do, based on real-time measurements from a sensor e.g. accelerometer, or a feedforward system that will analyse an input signal and react from this analysis. Since there are no well documented experiments concerning sensors in loudspeaker cabinets further experiments are to be deducted. A possible solution for a feedback system is depicted on \autoref{fig:feedbacksystem}. This system depicted will be further investigated to see if it is plausible.
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.75\textwidth]{Feedback_Acc2}
-\caption{How a possible feedback system should be implemented on the speaker}
+\caption{How a possible feedback system should be implemented in the speaker}
 \label{fig:feedbacksystem}
 \end{figure}
 
@@ -56,26 +56,27 @@ At this point it is yet to be determined if the system will be based on a feedba
 
 \input{1Chapters/1Preanalysis/hit_detection.tex}
 
-
-
+\subsubsection{Plausible solution} 
 The Previous tests have shown that it is possible to use an accelerometer to estimate the performance of the system by looking at the harmonic distortions. However following up on all of the trails the problems are as follows:
 \begin{itemize}
-\item harmonic distortions when music is played back, as estimating harmonic distortions introduced in a system, are only well-defined for periodic sinusoids.
-\item frequency response of vibration, using the cheaper accelerometer, on the driver and cabinet hardly changes when exposed for loud playback, thus it will be hard to get usable signals.
+\item Estimating harmonic distortions introduced in a system when playing music, are only well-defined for periodic sinusoids.
+\item Frequency response of vibration, using the cheaper accelerometer, on the driver and cabinet hardly changes when exposed for loud playback, thus it will be hard to get usable outputs of the sensors.
 \item The price for usable sensor equipment is too high compared to the application it is targeted for. 
 \item The sensors did not directly show a pattern for when a possible hit of the back plate were about to occur.
-\item The phase of the signal can not assumed "in phase" and it is therefore not possible to apply spectral estimations for detecting specific frequency peaks. i.e. if using a specific frequency as target for attenuation a 180 degrees phase shifted signal might bring false negatives. 
+\item The phase of the signal can not assumed "in phase" and it is therefore not possible to apply spectral estimations for detecting specific frequency peaks. e.g. if using a specific frequency as target for attenuation a 180 degrees phase shifted signal might bring false negatives. 
 \end{itemize}
 
-It can therefore be concluded that developing a system based on measurements from a accelerometer might turn out to be too complex to be realized in time due to time constraints. The system to be designed will therefore be based on a feedforward system. The concept of a feedback system which fulfil the problem statement is shown in \autoref{fig:Concept}.
+It can therefore be concluded that developing a system based on measurements from a accelerometer might turn out to be too complex to be realized in time due to time constraints. The system to be designed will therefore be based on a feedforward system. The concept of a feedforward system which fulfill the problem statement is shown in \autoref{fig:Concept}.
 
 \begin{figure}[H]
 \centering
 \tikzsetnextfilename{Concept}
 \scalebox{0.8}{
 \input{figures/Concept.tex}}
-\caption{Overview of design concept.}
+\caption{Overview of a feedforward design concept.}
 \label{fig:Concept}
 \end{figure}
 
-The design concept consist of a signal processing block, which will be analysed to understand which solution is best for the problem stated, a signal analysis block which will not be analysed further in this chapter, a user interface which will be analysed to determine how the user interface should be designed and lastly the processor block which will be analysed to determine which type of processor that should be used. 
+\todo[inline]{Er figur korrekt?}
+
+\textbf{The design concept consist of a signal processing block, which will be analysed to understand which solution is best for the problem stated. A signal analysis block which will not be analysed further in this chapter, a user interface which will be analysed to determine how the user interface should be designed and lastly the processor block which will be analysed to determine which type of processor that should be used.}
