new files and updates

--- a/Rapport/1Chapters/Implementation/ImplementationMAIN.tex
+++ b/Rapport/1Chapters/Implementation/ImplementationMAIN.tex
@@ -5,3 +5,5 @@
 \input{1Chapters/Implementation/filterImplementation.tex}
 
 \input{1Chapters/Implementation/Compressor.tex}
+
+\input{1Chapters/Implementation/communication.tex}
