--- a/Rapport/2Appendix/FIRTheory.tex
+++ b/Rapport/2Appendix/FIRTheory.tex
@@ -1,6 +1,14 @@
 \chapter{Finite impulse response Theory} \label{app:FIR_theory}
 This appendix will describe the theory of the FIR filter design method, which includes the Kaiser window method and calculating the b coefficients.
 
+\section{Designing FIR filters}
+
+To design a FIR filter the 
+
+% Samples the impulse response of an ideal brick-wall filter
+
+
+
 The requirements for a lowpass filter should be stated as on \autoref{fig:filter_req}.
 \begin{figure}[H]
 \centering
