--- a/Rapport/1Chapters/Implementation/communication.tex
+++ b/Rapport/1Chapters/Implementation/communication.tex
@@ -4,10 +4,52 @@ It is desirable that the system can be controlled from a user interface. The dev
 
 \section{Communication between DSP and PC}
 
+As PC's usually do not have a serial port for UART interfacing, a converter is needed.   
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.75\textwidth]{figures/communicationBlock.pdf}
+\caption{Overview of the interface with the DSP.}
+\label{fig:communicationBlock}
+\end{figure}
 
 
-
+\begin{figure}[H]
+\centering
+\begin{subfigure}[t]{0.47\textwidth}
+\includegraphics[width=\linewidth]{GUIApp}
+	\caption{Group delay of a 4th order IIR filter.}
+	\label{fig:GUIApp}
+\end{subfigure}
+\hspace{6mm} 
+\begin{subfigure}[t]{0.47\textwidth}
+\includegraphics[width=\linewidth]{GUISettings}
+	\caption{Group delay of a 50th order FIR filter.}
+	\label{fig:GUISettings}
+\end{subfigure}
+\caption{Group delay of IIR and FIR filter.}
+\label{fig:GUI}
+\end{figure}
 
 \section{Volume Controller, Equalizer and Bypass}
 
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.75\textwidth]{figures/communicationProtocolUART.pdf}
+\caption{Overview of the interface with the DSP.}
+\label{fig:communicationProtocolUART}
+\end{figure}
+
 \section{Spectrum Analyser}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.75\textwidth]{figures/communicationProtocolUARTTransmit.pdf}
+\caption{Overview of the interface with the DSP.}
+\label{fig:communicationProtocolUARTTransmit}
+\end{figure}
+
+
+
+% Appendix - Baudrate, register setup. Husk external bus setup.
+
