adding reserved word in preamp and new code in report

--- a/Rapport/00setup/preamble.tex
+++ b/Rapport/00setup/preamble.tex
@@ -301,7 +301,7 @@
 	escapeinside={\%*}{*)}
 }
 \lstset{
-	emph={uint8_t, int8_t, uint16_t, int16_t, uint32_t, int32_t,}, emphstyle={\color{keyword}\bfseries},
+	emph={uint8, int8_t, uint16_t, int16, uint32_t, int32_t,}, emphstyle={\color{keyword}\bfseries},
     emph={[2]ISR, TCE1, CNT, TCC1, TCD1_OVF_vect},emphstyle={[2]\color{keyword2}\bfseries}%
 }
 
