--- a/Rapport/2Appendix/AppendixMAIN.tex
+++ b/Rapport/2Appendix/AppendixMAIN.tex
@@ -27,6 +27,8 @@
 
 \input{2Appendix/LookUP}
 
+\input{2Appendix/dspSetup}
+
 \input{2Appendix/AcceptFilters}
 
 \input{2Appendix/AcceptFrequencyResponse}
