--- a/Rapport/main.tex
+++ b/Rapport/main.tex
@@ -1,3 +1,4 @@
+% !TeX spellcheck = en_US
 
 \input{00setup/preamble.tex}% package inclusion and set up of the document
 \input{00setup/macros.tex}% my new macros
